--- a/.gitignore
+++ b/.gitignore
@@ -409,3 +409,6 @@ FodyWeavers.xsd
 /OWCHTfix/assets/pingfanghk-semibold
 /OWCHTfix/assets/pingfanghk-semibold.manifest
 /OWCHTfix/assets/Translation.xml
+/OWCHTfix/assets/pingfanghk-semibold
+/OWCHTfix/assets/pingfanghk-semibold.manifest
+/OWCHTfix/assets/Translation.xml
